@@ -33,6 +33,7 @@ ChangeLog about GNU GLOBAL
 	  enough to worry about copylefting.
 	* libdb/db.h: typdefs pgno_t, indx_t and recno_t changed into macros.
 	* gctags/{C.c,Cpp.c}: memory violation fixed.
+	* libutil/getopt* and libregex/* moved to new libglibc/ directory.
 
 September 26 2000, Shigio Yamaguchi  <shigio@tamacom.com>
 
